# PRAHARI

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .gitleaks.toml  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  checkov.yaml  directory_structure.txt  docker-compose.yml  go.work  go.work.sum  package-lock.json  package.json  pyproject.toml  test_ai_platform.db  tfsec.yml  trivy.yaml
ai/platform/: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  coding_standards.md  docker-compose.yml  pyproject.toml
ai/platform/.github/workflows/: ci.yml
ai/platform/app/: main.py
ai/platform/app/core/: agent_orchestrator.py  analytics_agent.py  asset_agent.py  chunker.py  compliance_agent.py  config.py  contractor_agent.py  emergency_agent.py  evaluation_engine.py  exceptions.py  guardrail_engine.py  incident_agent.py  inspection_agent.py  maintenance_agent.py  memory_orchestrator.py  model_registry.py  models.py  permit_agent.py  prompt_renderer.py  prompt_validator.py  rag_orchestrator.py  retry.py  risk_agent.py  supervisor_agent.py  tool_executor.py
ai/platform/app/domain/: agents.py  analytics.py  assets.py  compliance.py  contractors.py  emergencies.py  evaluation.py  guardrails.py  incidents.py  inspections.py  knowledge.py  maintenance.py  memory.py  permits.py  prompts.py  risks.py  supervisor.py  tools.py
ai/platform/app/infrastructure/: cache.py  database.py  logger.py  registry.py  telemetry.py
ai/platform/app/infrastructure/models/: agent_entities.py  analytics_entities.py  asset_entities.py  compliance_entities.py  contractor_entities.py  emergency_entities.py  evaluation_entities.py  guardrail_entities.py  incident_entities.py  inspection_entities.py  knowledge_entities.py  maintenance_entities.py  memory_entities.py  permit_entities.py  prompt_entities.py  risk_entities.py  supervisor_entities.py  tool_entities.py
ai/platform/app/infrastructure/providers/: anthropic.py  base.py  bedrock.py  factory.py  gemini.py  mock.py  ollama.py  openai.py
ai/platform/app/infrastructure/repositories/: agent_repository.py  analytics_repository.py  asset_repository.py  compliance_repository.py  contractor_repository.py  emergency_repository.py  evaluation_repository.py  guardrail_repository.py  incident_repository.py  inspection_repository.py  (+8 more)
ai/platform/app/interfaces/: api.py  auth.py
ai/platform/tests/: conftest.py
ai/platform/tests/integration/: test_agents.py  test_analytics.py  test_assets.py  test_compliance.py  test_contractors.py  test_emergencies.py  test_endpoints.py  test_evaluation.py  test_guardrails.py  test_incidents.py  test_inspections.py  test_knowledge.py  test_maintenance.py  test_memory.py  test_permits.py  test_prompts.py  test_providers.py  test_risks.py  test_supervisor.py  test_tools.py
ai/platform/tests/unit/: test_core.py
(+3198 files in other folders)
