[tool.poetry]
name = "prahari-ai-platform"
version = "0.1.0"
description = "Volume 0: Foundation for PRAHARI EHS AI Platform"
authors = ["Antigravity <antigravity@google.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.4"}
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"
structlog = "^24.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
greenlet = "^3.0.3"
boto3 = "^1.34.0"
jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
types-python-jose = "^3.3.4.20240106"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "S", "A", "PT"]
ignore = ["A003", "S101"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
